--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -1,22 +1,47 @@
 <!DOCTYPE html>  
 <html>  
   <head>
-  	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= title %></title>
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css" media="all">
+    <title>新闻爬虫系统<%= title %></title>
+   <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style type="text/css">
+      a{
+        color:#fff;
+      }
+      .container{
+        background-color: grey;
+      }
+      .welcome{
+        text-align: center;
+      }
+    </style>
   </head>  
   <body>
-  	<header>
-  		<ul>
-  			<li>登陆</li>
-  			<li>注册</li>
-  			<li>关于</li>
-  		</ul>
-  	</header>
-    <h1><%= title %></h1>  
-    <p>Welcome to <%= title %></p>  
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 welcome bg-success">
+          <p>爬虫新闻系统<%= title %></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <ul>
+            <li>登陆</li>
+            <li>注册</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+         <%- siteBlock %>
+      </div>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>  
