--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -8,8 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
+      .container{
+        overflow: hidden;
+      }
       a{
         color:#fff;
+        white-space:nowrap
       }
       .container{
         background-color: grey;
